--- a/code/frontend/src/app/pages/logged/group-management/group-management.component.html
+++ b/code/frontend/src/app/pages/logged/group-management/group-management.component.html
@@ -15,6 +15,9 @@
     (click)="switchTab('approvals')"
   >
     Aprovações
+    @if (pendingEnrollments.length > 0) {
+      <span class="badge-count">{{ pendingEnrollments.length }}</span>
+    }
   </button>
   <button 
     class="tab-button" 
