--- a/code/frontend/src/app/pages/logged/group-management/group-management.component.scss
+++ b/code/frontend/src/app/pages/logged/group-management/group-management.component.scss
@@ -12,7 +12,7 @@
 
 .toolbar {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
   margin-bottom: 20px;
   gap: 16px;
