problema de paginação resolvido, Lista de Grupos

--- a/code/frontend/src/app/pages/logged/group-management/group-management.component.html
+++ b/code/frontend/src/app/pages/logged/group-management/group-management.component.html
@@ -48,7 +48,7 @@
 
     <app-data-table
       [columns]="tableColumns"
-      [data]="getTableData()"
+      [data]="filteredGroupsData"
       [actions]="getTableActions()"
       [loading]="isLoading"
       emptyMessage="Nenhum grupo encontrado"
