tela de presença de cultos

--- a/code/frontend/src/app/pages/public/landing/landing.component.html
+++ b/code/frontend/src/app/pages/public/landing/landing.component.html
@@ -25,6 +25,10 @@
         <span class="link-text">Empréstimo de Livros</span>
       </a>
 
+      <a routerLink="/lista-presenca" class="link-card">
+        <span class="link-text">Lista de Presença</span>
+      </a>
+
       <!-- Atualizar Cadastro é sempre a penultima opção -->
       <a routerLink="/atualizar-cadastro" class="link-card">
         <span class="link-text">Atualizar Cadastro</span>
